desktop version - not ready

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -40,7 +40,7 @@
         <button class="footer-subscribe__btn" type="submit">Subscribe</button>
       </form>
       <p class="footer-subscribe__text">
-        By subscribing you agree to with our
+        By subscribing you agree to with our &nbsp;
         <a class="footer-subscribe__link" href="" rel="noopener norefferer"
           >Privacy Policy</a
         >
