--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,45 +1,46 @@
 .footer {
-  height: 619px;
-  background-image: url('../images/footer/fuit-background-mobile.png');
-  background-size: cover;
-  background-position: center;
+  //   background-image: url('../images/footer/fuit-background-mobile.png');
+  //   background-size: cover;
+  //   background-position: center;
   box-shadow: 0px -4px 24px rgba(105, 105, 105, 0.1);
 
-  @media screen and (min-width: 768px) {
-    height: 506px;
-    background-image: url('../images/footer/fruit-background-tablet.png');
+  @media screen and (min-width: $tablet) {
+    // background-image: url('../images/footer/fruit-background-tablet.png');
   }
 }
 
 .footer-nav__wrap {
   display: flex;
-  flex-direction: row;
+  @media screen and (min-width: $tablet) {
+    flex-direction: row;
+  }
 }
 
 .footer__logo {
   margin-top: 60px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-top: 100px;
   }
 }
 .footer__nav {
   display: flex;
   align-items: center;
-  margin-top: 64px;
-  margin-left: 81px;
-  margin-right: 101px;
-  margin-bottom: 40px;
+  margin: 64px 101px 40px 81px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: inline-flex;
-    margin-top: 118px;
-    margin-right: 0;
-    margin-left: 114px;
-    margin-bottom: 57px;
+    margin: 118px 0px 57px 114px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-left: 145px;
+    margin-bottom: 0;
   }
 }
 .footer-nav__list {
-  display: inline-flex;
+  @media screen and (min-width: $tablet) {
+    display: inline-flex;
+  }
 }
 .footer-nav__item {
   font-size: 14px;
@@ -48,20 +49,39 @@
 
   padding-bottom: 20px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     padding-right: 28px;
   }
 
   &:last-child {
     padding-bottom: 0;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       padding-right: 0;
     }
   }
 }
 .footer-nav__link {
   cursor: pointer;
+  transition: var(--animation);
+
+  &:hover,
+  &:focus {
+    @media screen and (min-width: $mobile) {
+      color: var(--btn-default);
+      text-decoration: underline;
+    }
+  }
+}
+.footer__subscribe {
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    flex-direction: column;
+    // margin-left: auto;
+    float: right;
+    transform: translateY(-160);
+    margin-top: 100px;
+  }
 }
 .footer-subscribe__title {
   font-weight: 500;
@@ -73,21 +93,25 @@
 .footer-subscribe__form {
   display: flex;
   flex-direction: column;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     flex-direction: row;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-left: auto;
   }
 }
 .footer-subscribe__input {
   display: block;
   width: 100%;
-  padding: 12px;
+  padding: 11px;
 
   border: 0.854167px solid var(--yellow-main);
   border-radius: 30px;
   margin-bottom: 20px;
   outline: none;
+  transition: var(--animation);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     width: 279px;
     margin-right: 13px;
     margin-bottom: 12px;
@@ -124,9 +148,16 @@
   font-weight: 500;
   color: var(--main-text-color);
   outline: none;
+  transition: var(--animation);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-left: 0;
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: $desktop) {
+    display: flex;
+    margin-left: auto;
+    flex-direction: row-reverse;
   }
 
   &:hover,
@@ -139,13 +170,26 @@
   font-size: 10px;
   line-height: calc(12 / 10);
   color: var(--main-text-color);
+
+  @media screen and (min-width: $tablet) {
+    display: flex;
+    margin-left: auto;
+    margin-bottom: 80px;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+  }
+
+  @media screen and (min-width: $desktop) {
+    margin-right: auto;
+    margin-left: 0;
+  }
 }
 .footer-subscribe__link {
   text-decoration: underline;
   color: var(--dark-green);
 }
 .footer-terms__wrap {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -155,26 +199,29 @@
 .footer__terms {
   margin-top: 60px;
   margin-bottom: 40px;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-top: 0;
     margin-bottom: 8px;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 100px;
   }
 }
 .footer-terms__list {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     justify-content: center;
   }
 }
 .footer-terms__item {
   &:last-child {
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $tablet) {
       padding-right: 0;
     }
   }
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     padding-right: 20px;
   }
 }
@@ -183,6 +230,11 @@
   line-height: calc(12 / 10);
   text-decoration: underline;
   color: var(--dark-green);
+
+  @media screen and (min-width: $tablet) {
+    font-size: 12px;
+    line-height: calc(14 / 12);
+  }
 }
 .footer__right {
   display: flex;
@@ -194,9 +246,14 @@
   line-height: calc(12 / 10);
   color: var(--main-text-color);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet) {
     margin-bottom: 8px;
     justify-content: center;
     margin-left: auto;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+  }
+  @media screen and (min-width: $desktop) {
+    margin-bottom: 100px;
   }
 }
