--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,35 +1,35 @@
 <footer class="footer">
-  <div class="container footer__container">
+  <div class="container">
     <div class="footer-nav__wrap">
       <a class="footer__logo" href="./index.html"
-        ><svg class="footer-logo__icon" width="69" height="51">
+        ><svg class="logo__svg" width="65" height="51">
           <use href="./images/sprite.svg#logo"></use></svg
       ></a>
       <nav class="footer__nav">
-        <ul class="footer-nav__list">
-          <li class="footer-nav__item">
-            <a class="footer-nav__link" href="">Home</a>
+        <ul class="nav__list nav__list--footer">
+          <li class="nav__item">
+            <a class="nav__link nav__link--footer" href="#home">Home</a>
           </li>
-          <li class="footer-nav__item">
-            <a class="footer-nav__link" href="">About</a>
+          <li class="nav__item">
+            <a class="nav__link nav__link--footer" href="#about">About</a>
           </li>
-          <li class="footer-nav__item">
-            <a class="footer-nav__link" href="">Service</a>
+          <li class="nav__item">
+            <a class="nav__link nav__link--footer" href="#service">Service</a>
           </li>
-          <li class="footer-nav__item">
-            <a class="footer-nav__link" href="">Menu</a>
+          <li class="nav__item">
+            <a class="nav__link nav__link--footer" href="#menu">Menu</a>
           </li>
-          <li class="footer-nav__item">
-            <a class="footer-nav__link" href="">Contact</a>
+          <li class="nav__item">
+            <a class="nav__link nav__link--footer" href="#contacts">Contact</a>
           </li>
         </ul>
       </nav>
     </div>
     <div class="footer__subscribe">
-      <p class="footer-subscribe__title">Subscribe</p>
+      <p class="subscribe__title subscribe__title--footer">Subscribe</p>
       <form class="footer-subscribe__form">
         <input
-          class="footer-subscribe__input"
+          class="subscribe__input subscribe__input--footer"
           name="email"
           required
           type="email"
@@ -37,7 +37,12 @@
           placeholder="Enter your email"
           required
         />
-        <button class="footer-subscribe__btn" type="submit">Subscribe</button>
+        <!-- <svg width="12" height="12">
+          <use href="../images/sprite.svg#"></use>
+        </svg> -->
+        <button class="subscribe__btn subscribe__btn--footer" type="submit">
+          Subscribe
+        </button>
       </form>
       <p class="footer-subscribe__text">
         By subscribing you agree to with our &nbsp;
