--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,7 +15,7 @@
 
         <button class="hero__slider--but">
           <svg  class="hero__vector" >
-            <use  class="hero__vector--color" href="./images/sprite.svg#arrow-left" ></use>
+            <use  class="hero__vector--color" href="./images/sprite.svg#arrow-left-simple" ></use>
           </svg>
         </button>
 
@@ -28,7 +28,7 @@
 
         <button class="hero__slider--but but-r">
         <svg  class="hero__vector" >
-          <use class="hero__vector--color" href="./images/sprite.svg#arrow-right"></use>
+          <use class="hero__vector--color" href="./images/sprite.svg#arrow-right-simple"></use>
         </svg>
         </button>
 
