--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -20,7 +20,7 @@
         </button>
 
                 <picture>
-                  <source srcset="./images/hero/hero1_1200@1x.png 1x, ./images/hero/hero1_1200@2x.png 2x" media="(min-width: $desktop)"/>
+                  <source srcset="./images/hero/hero1_1200@1x.png 1x, ./images/hero/hero1_1200@2x.png 2x" media="(min-width: 1280px)"/>
                   <source srcset="./images/hero/hero1_768@1x.png 1x, ./images/hero/hero1_768@2x.png 2x" media="(min-width: 768px)"/>
                   <img class="hero__foto--size" src="./images/hero/hero1_768@1x.png" alt="Фото блюда"/>
                 </picture>
