--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -37,7 +37,9 @@
 .hero__info{
     
     @media screen  and (min-width: 320px){
-        width: 280px;    
+        min-width: 280px; 
+        margin-left: auto;
+        margin-right: auto;   
     }
     @media screen  and (min-width: 768px){
         width: 704px;    
@@ -155,7 +157,7 @@
         top: 250px;
         height: 40px;
         width: 48px;
-        padding: 6px 13px 6px 18px;
+        padding: 6px 13px 6px 14px;
     }
 
 }
