--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,15 +35,15 @@
       <!-- mobile navigation -->
       <button class="burger-menu" data-menu-open>
         <svg class="burger-menu__svg" width="28" height="28">
-          <use href="./images/sprite.svg#mobile-menu"></use>
+          <use href="./images/sprite.svg#burger-menu"></use>
         </svg>
       </button>
 
       <div class="menu-backdrop" data-menu>
         <div class="menu-container">
-          <button class="menu-close" type="button" data-menu-close>
-            <svg class="menu-close__icon" width="24" height="24">
-              <use href="./images/sprite.svg#menu-close"></use>
+          <button class="burger-close" type="button" data-menu-close>
+            <svg class="burger-close__icon" width="11" height="11">
+              <use href="./images/sprite.svg#burger-close"></use>
             </svg>
           </button>
           <ul class="nav__list">
