--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -37,7 +37,9 @@
 .hero__info{
     
     @media screen  and (min-width: 320px){
-        width: 280px;    
+        min-width: 280px; 
+        margin-left: auto;
+        margin-right: auto;   
     }
     @media screen  and (min-width: 768px){
         width: 704px;    
@@ -148,14 +150,14 @@
         top: 135px;
         height: 28px;
         width: 34px;
-        padding: 4px 9px 4px 13px;
+        padding: 4px 9px 4px 8px;
     }
     @media screen  and (min-width: 1280px){
         right: 520px;
         top: 250px;
         height: 40px;
         width: 48px;
-        padding: 6px 13px 6px 18px;
+        padding: 6px 13px 6px 14px;
     }
 
 }
