--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,20 +1,26 @@
 .footer {
+  height: 619px;
   background-image: url('../images/footer/orange-mobile.png'),
     url('../images/footer/apple-and-orange-mobile.png'),
     url('../images/footer/apple-mobile.png');
-  background-size: 104px, 66px, 116px;
   background-repeat: no-repeat;
-  background-position: top 0px right 0px, bottom 0px, top 0px left 0px;
+  background-position: 216px 0px, bottom center, 0px 132px;
   box-shadow: 0px -4px 24px rgba(105, 105, 105, 0.1);
   position: relative;
+  @media screen and (min-width: $mobile) {
+    background-position: 375px 0px, 120px 553px, 0px 132px;
+  }
 
   @media screen and (min-width: $tablet) {
+    height: 506px;
     background-image: url('../images/footer/footer-background-tablet.png');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100%;
     background-position: center;
   }
   @media screen and (min-width: $desktop) {
+    height: 395px;
+    background-size: 100%;
     background-image: url('../images/footer/footer-background-desktop.png');
   }
 }
@@ -33,12 +39,9 @@
   }
 }
 .footer__nav {
-  display: flex;
-  align-items: center;
-  margin: 64px 101px 40px 81px;
+  margin: 64px 0px 40px 81px;
 
   @media screen and (min-width: $tablet) {
-    display: inline-flex;
     margin: 118px 0px 57px 114px;
   }
 
@@ -50,7 +53,6 @@
 .nav__list--footer {
   gap: 20px;
   @media screen and (min-width: $tablet) {
-    display: inline-flex;
     gap: 28px;
   }
 }
@@ -60,12 +62,14 @@
 
   &:hover,
   &:focus {
+    background-color: transparent;
     color: var(--btn-default);
     text-decoration: underline;
   }
 }
 
 .footer__subscribe {
+  margin-bottom: 60px;
   @media screen and (min-width: $desktop) {
     display: flex;
     flex-direction: column;
@@ -86,9 +90,6 @@
   flex-direction: column;
   @media screen and (min-width: $tablet) {
     flex-direction: row;
-  }
-  @media screen and (min-width: $desktop) {
-    margin-left: auto;
   }
 }
 .subscribe__input--footer {
@@ -111,13 +112,7 @@
   transition: var(--animation);
 
   @media screen and (min-width: $tablet) {
-    margin-left: 0;
     margin-bottom: 0;
-  }
-  @media screen and (min-width: $desktop) {
-    display: flex;
-    margin-left: auto;
-    flex-direction: row-reverse;
   }
 
   &:hover,
@@ -139,7 +134,6 @@
   }
 
   @media screen and (min-width: $desktop) {
-    margin-right: auto;
     margin-left: 0;
   }
 }
@@ -151,7 +145,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 60px;
 
   @media screen and (min-width: $tablet) {
     margin-top: 100px;
@@ -159,29 +152,24 @@
     flex-direction: row;
   }
   @media screen and (min-width: $desktop) {
-    margin-top: 80px;
+    margin-top: 147px;
+    margin-bottom: 100px;
   }
 }
 
 .footer__terms {
-  margin-top: 60px;
   margin-bottom: 40px;
   @media screen and (min-width: $tablet) {
     margin-top: 0;
     margin-bottom: 8px;
-  }
-  @media screen and (min-width: $desktop) {
-    margin-bottom: 100px;
   }
 }
 .footer-terms__list {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  @media screen and (min-width: $tablet) {
-    justify-content: center;
-  }
 }
+
 .footer-terms__item {
   &:last-child {
     @media screen and (min-width: $tablet) {
@@ -211,10 +199,12 @@
   font-size: 10px;
   line-height: calc(12 / 10);
   color: var(--main-text-color);
+  margin-bottom: 60px;
 
   @media screen and (min-width: $tablet) {
     margin-left: auto;
     font-size: 12px;
     line-height: calc(14 / 12);
+    margin-bottom: 0;
   }
 }
