--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -8,7 +8,7 @@
     
     display: flex;
     justify-content: space-between;
-    // align-items: center;
+    
     position: relative;
     
 
@@ -98,7 +98,7 @@
 .hero__foto--top{
     position: relative;
     border-radius: 50%;
-    // overflow: hidden;
+    
 
     @media screen  and (min-width: 320px){
         display: none;    
@@ -201,6 +201,7 @@
     width: 100px;
     text-align: center;
     @extend %btn;
+    transition: background 250ms var(--animation);
     @media screen  and (min-width: $tablet){
         margin-bottom: 73px;
         
