--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -37,9 +37,12 @@
           placeholder="Enter your email"
           required
         />
-        <!-- <svg width="12" height="12">
-          <use href="../images/sprite.svg#"></use>
-        </svg> -->
+        <svg class="error__icon" width="12px" height="12px">
+          <use href="./images/sprite.svg#error-sign"></use>
+        </svg>
+        <span class="error__text"
+          >Not a valid email address (example@email.com)</span
+        >
         <button class="subscribe__btn subscribe__btn--footer" type="submit">
           Subscribe
         </button>
