--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -4,22 +4,20 @@
     url('../images/footer/apple-and-orange-mobile.png'),
     url('../images/footer/apple-mobile.png');
   background-repeat: no-repeat;
-  background-position: 216px 0px, bottom center, 0px 132px;
+  background-position: right 0, bottom, 0 132px;
   box-shadow: 0px -4px 24px rgba(105, 105, 105, 0.1);
   position: relative;
   @media screen and (min-width: $mobile) {
-    background-position: 375px 0px, 120px 553px, 0px 132px;
+    background-position: right 0, bottom, 0 132px;
   }
 
   @media screen and (min-width: $tablet) {
-    height: 506px;
     background-image: url('../images/footer/footer-background-tablet.png');
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
   }
   @media screen and (min-width: $desktop) {
-    height: 395px;
     background-size: 100%;
     background-image: url('../images/footer/footer-background-desktop.png');
   }
@@ -74,6 +72,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 100px;
+    margin-right: 21px;
     position: absolute;
     top: 0;
     right: 0;
@@ -148,20 +147,17 @@
 
   @media screen and (min-width: $tablet) {
     margin-top: 100px;
-    margin-bottom: 100px;
     flex-direction: row;
   }
   @media screen and (min-width: $desktop) {
     margin-top: 147px;
-    margin-bottom: 100px;
   }
 }
 
 .footer__terms {
   margin-bottom: 40px;
   @media screen and (min-width: $tablet) {
-    margin-top: 0;
-    margin-bottom: 8px;
+    margin: 0;
   }
 }
 .footer-terms__list {
@@ -199,12 +195,10 @@
   font-size: 10px;
   line-height: calc(12 / 10);
   color: var(--main-text-color);
-  margin-bottom: 60px;
 
   @media screen and (min-width: $tablet) {
     margin-left: auto;
     font-size: 12px;
     line-height: calc(14 / 12);
-    margin-bottom: 0;
   }
 }
