--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -37,12 +37,14 @@
           placeholder="Enter your email"
           required
         />
-        <svg class="error__icon" width="12px" height="12px">
-          <use href="./images/sprite.svg#error-sign"></use>
-        </svg>
-        <span class="error__text"
-          >Not a valid email address (example@email.com)</span
-        >
+        <div class="error__wrap">
+          <svg class="error__icon" width="12px" height="12px">
+            <use href="./images/sprite.svg#error-sign"></use>
+          </svg>
+          <span class="error__text"
+            >Not a valid email address (example@email.com)</span
+          >
+        </div>
         <button class="subscribe__btn subscribe__btn--footer" type="submit">
           Subscribe
         </button>
