for checking - except icon

--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -40,6 +40,14 @@
           placeholder="Enter your email"
           required
         />
+        <div class="error__wrap error__wrap--subscribe">
+          <svg class="error__icon" width="12px" height="12px">
+            <use href="./images/sprite.svg#error-sign"></use>
+          </svg>
+          <span class="error__text"
+            >Not a valid email address (example@email.com)</span
+          >
+        </div>
         <button class="subscribe__btn" type="submit">Subscribe</button>
       </form>
     </div>
