--- a/src/sass/layout/_subscribe.scss
+++ b/src/sass/layout/_subscribe.scss
@@ -1,13 +1,13 @@
 .subscribe {
   position: relative;
-  top: -42px;
+  margin-top: -70px;
   padding-bottom: 60px;
   @media screen and (min-width: 768px) {
-    top: -73px;
+    margin-top: -105px;
     padding-bottom: 100px;
   }
   @media screen and (min-width: 1200px) {
-    top: -65px;
+    margin-top: -65px;
     padding-bottom: 64px;
   }
 }
@@ -24,6 +24,7 @@
   display: flex;
   justify-content: center;
   margin-bottom: 17px;
+  position: relative;
 
   @media screen and (min-width: 768px) {
     margin-left: auto;
@@ -34,6 +35,7 @@
     float: right;
     margin-left: 38px;
     margin-bottom: 0;
+    margin-top: -115;
   }
 }
 .subscribe__wrap {
@@ -92,6 +94,11 @@
   border-radius: 30px;
   margin-bottom: 20px;
   outline: none;
+  position: relative;
+
+  &:invalid:not(:placeholder-shown) {
+    margin-bottom: 40px;
+  }
 
   &:valid {
     border: 0.854167px solid var(--dark-green);
@@ -145,5 +152,19 @@
 
   @media screen and (min-width: 768px) {
     margin-left: 0;
+  }
+}
+
+.error__wrap--subscribe {
+  display: flex;
+
+  @media screen and (min-width: $mobile) {
+    margin-top: -60;
+  }
+  @media screen and (min-width: $tablet) {
+    margin-top: 85;
+  }
+  @media screen and (min-width: $desktop) {
+    margin-top: 115;
   }
 }
