--- a/src/sass/layout/_customers.scss
+++ b/src/sass/layout/_customers.scss
@@ -104,7 +104,7 @@
     background-color: #fff;
     display: block;
     border-radius: 0px 30px 30px 30px;
-    padding: 8px;
+    padding: 12px;
 
     @media screen and (max-width: 479px) {
       max-width: 280px;
@@ -135,17 +135,26 @@
   color: var(--main-text-color);
   margin-top: 28px;
   margin-bottom: 40px;
+
+  @media screen and (min-width: $tablet) {
+    font-size: 18px;
+    line-height: calc(19px / 18px);
+  }
 }
 .profile__block {
   display: flex;
   flex-direction: row;
   gap: 16px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 .profile {
   padding-right: 16px;
   border-right: 0.854167px solid #7eb101;
   display: flex;
   flex-direction: column;
+  padding-top: 2px;
+  padding-bottom: 2px;
 
   &__img {
     width: 48px;
