error-icon-fixed

--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -41,11 +41,11 @@
           required
         />
         <div class="error__wrap error__wrap--subscribe">
-          <svg class="error__icon" width="12px" height="12px">
-            <use href="./images/sprite.svg#error-sign"></use>
+          <svg class="error__icon" width="12" height="12">
+            <use href="./images/sprite.svg#error_sign"></use>
           </svg>
           <span class="error__text"
-            >Not a valid email address (example@email.com)</span
+            >&nbsp;Not a valid email address (example@email.com)</span
           >
         </div>
         <button class="subscribe__btn" type="submit">Subscribe</button>
