--- a/src/sass/layout/_subscribe.scss
+++ b/src/sass/layout/_subscribe.scss
@@ -157,14 +157,16 @@
 
 .error__wrap--subscribe {
   display: flex;
+  transition: var(--animation);
+  margin-top: -15;
 
   @media screen and (min-width: $mobile) {
-    margin-top: -60;
+    margin-top: -65;
   }
   @media screen and (min-width: $tablet) {
-    margin-top: 85;
+    margin-top: 80;
   }
   @media screen and (min-width: $desktop) {
-    margin-top: 115;
+    margin-top: 112;
   }
 }
