--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -148,10 +148,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
   padding-bottom: 50px;
 
   @media screen and (min-width: $tablet) {
+    align-items: center;
     padding-bottom: 90px;
     margin-top: 100px;
     flex-direction: row;
@@ -184,6 +184,7 @@
   }
 }
 .footer-terms__link {
+  font-weight: 400;
   font-size: 10px;
   line-height: calc(12 / 10);
   text-decoration: underline;
@@ -197,6 +198,7 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  font-weight: 400;
   font-size: 10px;
   line-height: calc(12 / 10);
   color: var(--main-text-color);
