--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -1,5 +1,5 @@
-<section class="customers customers__bg__img">
-  <div class="container">
+<section class="customers__bg__img">
+  <div class="container customers">
     <h2 class="title">What our Customers Say</h2>
     <p class="section__description">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
