--- a/src/sass/layout/_customers.scss
+++ b/src/sass/layout/_customers.scss
@@ -3,6 +3,8 @@
   padding-top: 60px;
   padding-bottom: 60px;
   width: 320px;
+  margin-right: auto;
+  margin-left: auto;
 
   @media screen and (min-width: $mobile) {
     padding-top: 60px;
@@ -22,9 +24,8 @@
 .customers__bg__img {
   background: var(--bgc-main);
   background: no-repeat;
-  background-size: 320px 770px;
-  margin-right: auto;
-  margin-left: auto;
+  background-size: cover;
+  background-position: bottom;
 
   background-image: url(../images/customers/customers-bg-mob@1x.png);
   @media (min-device-pixel-ratio: 2),
@@ -33,7 +34,6 @@
     background-image: url(../images/customers/customers-bg-mob@2x.png);
   }
   @media screen and (min-width: $mobile) {
-    background-size: 480px 730px;
     background-image: url(../images/customers/customers-bg-480@1x.png);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -42,7 +42,6 @@
     }
   }
   @media screen and (min-width: $tablet) {
-    background-size: 768px 500px;
     background-image: url(../images/customers/customers-bg-tab@1x.png);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -51,7 +50,6 @@
     }
   }
   @media screen and (min-width: $desktop) {
-    background-size: 1280px 600px;
     background-image: url(../images/customers/customers-bg-desk@1x.png);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -104,16 +102,21 @@
     background-color: #fff;
     display: block;
     border-radius: 0px 30px 30px 30px;
-    padding: 12px;
+    padding: 8px;
 
     @media screen and (max-width: 479px) {
       max-width: 280px;
     }
+    @media screen and (min-width: 480px) {
+      width: 440px;
+    }
     @media screen and (min-width: $tablet) {
       width: 336px;
+      padding: 12px;
     }
     @media screen and (min-width: $desktop) {
       width: 500px;
+      padding: 14px;
     }
   }
 }
@@ -121,6 +124,7 @@
   display: flex;
   flex-direction: row;
   gap: 3px;
+  height: 16px;
 
   &__icon {
     fill: #ffe550;
@@ -139,6 +143,10 @@
   @media screen and (min-width: $tablet) {
     font-size: 18px;
     line-height: calc(19px / 18px);
+    height: 84px;
+  }
+  @media screen and (min-width: $desktop) {
+    height: 63px;
   }
 }
 .profile__block {
