--- a/src/sass/layout/_subscribe.scss
+++ b/src/sass/layout/_subscribe.scss
@@ -1,13 +1,12 @@
 .subscribe {
-  position: relative;
-  margin-top: -70px;
+  margin-top: -40px;
   padding-bottom: 60px;
   @media screen and (min-width: 768px) {
-    margin-top: -105px;
+    margin-top: -73px;
     padding-bottom: 100px;
   }
   @media screen and (min-width: 1200px) {
-    margin-top: -65px;
+    margin-top: -40px;
     padding-bottom: 64px;
   }
 }
@@ -33,9 +32,9 @@
   @media screen and (min-width: 1200px) {
     flex-direction: column-reverse;
     float: right;
-    margin-left: 38px;
+    margin-left: 0;
     margin-bottom: 0;
-    margin-top: -115;
+    margin-top: -40px;
   }
 }
 .subscribe__wrap {
@@ -157,14 +156,16 @@
 
 .error__wrap--subscribe {
   display: flex;
+  transition: var(--animation);
+  margin-top: -15;
 
   @media screen and (min-width: $mobile) {
-    margin-top: -60;
+    margin-top: -65;
   }
   @media screen and (min-width: $tablet) {
-    margin-top: 85;
+    margin-top: 80;
   }
   @media screen and (min-width: $desktop) {
-    margin-top: 115;
+    margin-top: 112;
   }
 }
