--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -1,4 +1,4 @@
-<section class="customers__bg__img">
+<section class="customers__bg__img" id="service">
   <div class="container customers">
     <h2 class="title">What our Customers Say</h2>
     <p class="section__description">
