--- a/src/partials/offerings.html
+++ b/src/partials/offerings.html
@@ -29,7 +29,7 @@
         <img src="./images/offerings/apple@1x_sm.png" alt="Apple" />
       </picture>
     </div>
-    <div class="offerings__block">
+    <div class="offerings__block" id="about">
       <h2 class="offerings__title">What’s Special About Our Offerings</h2>
       <p class="offerings__description text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
