--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="contacts">
   <div class="container">
     <div class="footer-nav__wrap">
       <a class="footer__logo" href="./index.html"
