--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,16 +16,16 @@
               <a href="#home" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
-              <a href="#hero" class="nav__link">About</a>
+              <a href="#about" class="nav__link">About</a>
             </li>
             <li class="nav__item">
-              <a href="#offerings" class="nav__link">Service</a>
+              <a href="#service" class="nav__link">Service</a>
             </li>
             <li class="nav__item">
-              <a href="#favorites" class="nav__link">Menu</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li class="nav__item">
-              <a href="#subscribe" class="nav__link">Contact</a>
+              <a href="#contacts" class="nav__link">Contact</a>
             </li>
           </ul>
         </nav>
@@ -51,16 +51,16 @@
               <a href="#home" class="nav__link">Home</a>
             </li>
             <li class="nav__item">
-              <a href="#hero" class="nav__link">About</a>
+              <a href="#about" class="nav__link">About</a>
             </li>
             <li class="nav__item">
-              <a href="#offerings" class="nav__link">Service</a>
+              <a href="#service" class="nav__link">Service</a>
             </li>
             <li class="nav__item">
-              <a href="#favorites" class="nav__link">Menu</a>
+              <a href="#menu" class="nav__link">Menu</a>
             </li>
             <li class="nav__item">
-              <a href="#subscribe" class="nav__link">Contact</a>
+              <a href="#contacts" class="nav__link">Contact</a>
             </li>
           </ul>
         </div>
