--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  height: 619px;
   background-image: url('../images/footer/orange-mobile.png'),
     url('../images/footer/apple-and-orange-mobile.png'),
     url('../images/footer/apple-mobile.png');
@@ -11,12 +12,13 @@
   }
 
   @media screen and (min-width: $tablet) {
-    background-position: bottom center;
     background-image: url('../images/footer/footer-background-tablet.png');
     background-repeat: no-repeat;
     background-size: 100%;
+    background-position: center;
   }
   @media screen and (min-width: $desktop) {
+    background-size: 100%;
     background-image: url('../images/footer/footer-background-desktop.png');
   }
 }
@@ -98,7 +100,7 @@
     margin-right: 13px;
     margin-bottom: 12px;
 
-    &:invalid:not(:placeholder-shown) {
+    &:invalid {
       margin-bottom: 25px;
     }
   }
@@ -147,11 +149,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-bottom: 50px;
 
   @media screen and (min-width: $tablet) {
-    align-items: center;
-    padding-bottom: 90px;
     margin-top: 100px;
     flex-direction: row;
   }
@@ -183,11 +182,11 @@
   }
 }
 .footer-terms__link {
-  font-weight: 400;
   font-size: 10px;
   line-height: calc(12 / 10);
   text-decoration: underline;
   color: var(--dark-green);
+
   @media screen and (min-width: $tablet) {
     font-size: 12px;
     line-height: calc(14 / 12);
@@ -197,10 +196,11 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  font-weight: 400;
+
   font-size: 10px;
   line-height: calc(12 / 10);
   color: var(--main-text-color);
+
   @media screen and (min-width: $tablet) {
     margin-left: auto;
     font-size: 12px;
@@ -223,7 +223,6 @@
 
   .subscribe__input:invalid:required:not(:placeholder-shown) ~ .error__wrap & {
     transition: var(--animation);
-    fill: var(--error-color);
     opacity: 1;
   }
 }
