--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,5 +1,7 @@
 .header {
+  position: relative;
   background-color: var(--bgc-secondary);
+  box-shadow: 0px 4px 24px rgba(105, 105, 105, 0.1);
 }
 
 .header__wrap {
