--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <!-- Герой -->
-<section class="hero">
+<section class="hero" is="home">
     <div class="container">
   
       <div class="hero__general--top">
