--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -28,23 +28,25 @@
     <div class="footer__subscribe">
       <p class="subscribe__title subscribe__title--footer">Subscribe</p>
       <form class="footer-subscribe__form">
-        <input
-          class="subscribe__input subscribe__input--footer"
-          name="email"
-          required
-          type="email"
-          required
-          placeholder="Enter your email"
-          required
-        />
-        <div class="error__wrap">
-          <svg class="error__icon" width="12" height="12">
-            <use href="./images/sprite.svg#error_sign"></use>
-          </svg>
-          <span class="error__text"
-            >Not a valid email address (example@email.com)</span
-          >
-        </div>
+        <label class="subscribe__label">
+          <input
+            class="subscribe__input subscribe__input--footer"
+            name="email"
+            required
+            type="email"
+            required
+            placeholder="Enter your email"
+            required
+          />
+          <div class="error__wrap">
+            <svg class="error__icon" width="12" height="12">
+              <use href="./images/sprite.svg#error_sign"></use>
+            </svg>
+            <span class="error__text"
+              >Not a valid email address (example@email.com)</span
+            >
+          </div>
+        </label>
         <button class="subscribe__btn subscribe__btn--footer" type="submit">
           Subscribe
         </button>
