--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,5 +1,5 @@
 <section class="subscribe">
-  <div class="container container__subscribe">
+  <div class="container">
     <picture class="subscribe__image">
       <source
         srcset="
@@ -31,23 +31,25 @@
         varius enim in eros elementum tristique.
       </p>
       <form class="subscribe__form">
-        <input
-          class="subscribe__input"
-          name="email"
-          required
-          type="email"
-          required
-          placeholder="Enter your email"
-          required
-        />
-        <div class="error__wrap error__wrap--subscribe">
-          <svg class="error__icon" width="12" height="12">
-            <use href="./images/sprite.svg#error_sign"></use>
-          </svg>
-          <span class="error__text"
-            >&nbsp;Not a valid email address (example@email.com)</span
-          >
-        </div>
+        <label class="subscribe__label">
+          <input
+            class="subscribe__input"
+            name="email"
+            required
+            type="email"
+            required
+            placeholder="Enter your email"
+            required
+          />
+          <div class="error__wrap error__wrap--subscribe">
+            <svg class="error__icon" width="12" height="12">
+              <use href="./images/sprite.svg#error_sign"></use>
+            </svg>
+            <span class="error__text"
+              >Not a valid email address (example@email.com)</span
+            >
+          </div>
+        </label>
         <button class="subscribe__btn" type="submit">Subscribe</button>
       </form>
     </div>
