--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -211,3 +211,36 @@
     }   
 }
 
+// _________________________________________________
+.carusel__container {
+    width: 292px;
+    height: 292px;
+    margin: auto;
+    // border: 5px solid rgb(48, 48, 176);
+    border-radius: 50%;
+    overflow: hidden;
+    @media screen  and (min-width: 1280px){
+        width:528px ;
+        height: 528px;
+    }
+
+}
+.carusel__container img {
+    display: block;
+    width: 100%;
+
+}
+.carusel__slide {
+    display: flex;
+    height: 292px;
+    @media screen  and (min-width: 1280px){
+        height: 528px;
+        
+    }
+}
+
+.transformAnimation {
+    transition: 500ms all ease-in-out;
+}
+
+
