--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -16,6 +16,7 @@
 
 // layouts styles
 @import './layout/header';
+@import './layout/modal';
 @import './layout/hero';
 @import './layout/offerings';
 @import './layout/favorites';
