--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -8,7 +8,7 @@
           <p class="hero__title--descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
             enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
             diam libero vitae erat.</p>
-          <button class="hero__btn">Order Now</button>
+          <button class="hero__btn" data-modal-open>Order Now</button>
         </div>
   
         <div class="hero__foto--top">
