--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,70 +1,60 @@
+<!-- jQuery 1.8 or later, 33 KB -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+<!-- Fotorama from CDNJS, 19 KB -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+
+
 <!-- Герой -->
 <section class="hero">
-    <div class="container">
-  
-      <div class="hero__general--top">
-        <div class="hero__info">
-          <h1 class="hero__title--top">Enjoy Your Favorite Food From Anywhere</h1>
-          <p class="hero__title--descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
-            enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
-            diam libero vitae erat.</p>
-          <button class="hero__btn">Order Now</button>
-        </div>
-  
-        <div class="hero__foto--top">
-  
-          <button class="hero__slider--but btn btn-left">
-            <svg  class="hero__vector" >
-              <use  class="hero__vector--color" href="./images/sprite.svg#arrow-left-simple" ></use>
-            </svg>
-          </button>
+  <div class="container">
 
-           <!-- Swiper -->
-           <div class="wrap">
-            <div class="carusel">
-                <div class="carusel__container">
-                    <div class="carusel__slide">
-                      <!-- <picture >
-                        <source srcset="./images/hero/big_hiro1@1x.png 1x, ./images/hero/big_hiro1@2x.png 2x" media="(min-width: 1280px)"/>
-                        <source srcset="./images/hero/small_hiro1@1x.png 1x, ./images/hero/small_hiro1@2x.png 2x" media="(min-width: 768px)"/>
-                        <img class="hero__foto--size" src="./images/hero/small_hiro1@1x.png" alt="Фото блюда"/>
-                      </picture>
-                      <picture >
-                        <source srcset="./images/hero/big_hiro2@1x.png 1x, ./images/hero/big_hiro2@2x.png 2x" media="(min-width: 1280px)"/>
-                        <source srcset="./images/hero/small_hiro2@1x.png 1x, ./images/hero/small_hiro2@2x.png 2x" media="(min-width: 768px)"/>
-                        <img class="hero__foto--size" src="./images/hero/small_hiro2@1x.png" alt="Фото блюда"/>
-                      </picture>
-                      <picture >
-                        <source srcset="./images/hero/big_hiro3@1x.png 1x, ./images/hero/big_hiro3@2x.png 2x" media="(min-width: 1280px)"/>
-                        <source srcset="./images/hero/small_hiro3@1x.png 1x, ./images/hero/small_hiro3@2x.png 2x" media="(min-width: 768px)"/>
-                        <img class="hero__foto--size" src="./images/hero/small_hiro3@1x.png" alt="Фото блюда"/>
-                      </picture> -->
-                        <img class="carusel__img" src="./images/hero/big_hiro1@1x.png"  alt="">
-                        <img class="carusel__img" src="./images/hero/big_hiro2@1x.png"  alt="">
-                        <img class="carusel__img" src="./images/hero/big_hiro3@1x.png"  alt="">
-                    </div>    
-                </div>
-              <div class="btnWrap"></div>  
-            </div>
-        </div>
-    
-        <script src="./js/script.js"></script> 
-
-          
-                  
-        
-  
-          <button class="hero__slider--but but-r  btn btn-right">
-          <svg  class="hero__vector" >
-            <use class="hero__vector--color" href="./images/sprite.svg#arrow-right-simple"></use>
-          </svg>
-          </button>
-  
-        </div>
+    <div class="hero__general--top">
+      <div class="hero__info">
+        <h1 class="hero__title--top">Enjoy Your Favorite Food From Anywhere</h1>
+        <p class="hero__title--descript">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius
+          enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
+          diam libero vitae erat.</p>
+        <button class="hero__btn">Order Now</button>
       </div>
-    </div> 
+      <div class="hero__foto--top">
 
-  
-  
-    
-  </section>  
+        <div class="fotorama" data-arrows="false" data-click="true" data-swipe="true" data-width="100%"
+        data-ratio="800/800">>
+
+
+      <picture >
+        <source srcset="./images/hero/big_hiro1@1x.png 1x, ./images/hero/big_hiro1@2x.png 2x" media="(min-width: 1280px)"/>
+        <source srcset="./images/hero/small_hiro1@1x.png 1x, ./images/hero/small_hiro1@2x.png 2x" media="(min-width: 768px)"/>
+        <img class="hero__foto--size" src="./images/hero/small_hiro1@1x.png" alt="Фото блюда"/>
+      </picture>
+      <picture >
+        <source srcset="./images/hero/big_hiro2@1x.png 1x, ./images/hero/big_hiro2@2x.png 2x" media="(min-width: 1280px)"/>
+        <source srcset="./images/hero/small_hiro2@1x.png 1x, ./images/hero/small_hiro2@2x.png 2x" media="(min-width: 768px)"/>
+        <img class="hero__foto--size" src="./images/hero/small_hiro2@1x.png" alt="Фото блюда"/>
+      </picture>
+      <picture >
+        <source srcset="./images/hero/big_hiro3@1x.png 1x, ./images/hero/big_hiro3@2x.png 2x" media="(min-width: 1280px)"/>
+        <source srcset="./images/hero/small_hiro3@1x.png 1x, ./images/hero/small_hiro3@2x.png 2x" media="(min-width: 768px)"/>
+        <img class="hero__foto--size" src="./images/hero/small_hiro3@1x.png" alt="Фото блюда"/>
+      </picture> 
+
+      </div>
+
+      </div>
+      <button class="hero__slider--but ">
+        <svg class="hero__vector">
+          <use class="hero__vector--color" href="./images/sprite.svg#arrow-left-simple"></use>
+        </svg>
+      </button>
+
+      <button class="hero__slider--but but-r  ">
+        <svg class="hero__vector">
+          <use class="hero__vector--color" href="./images/sprite.svg#arrow-right-simple"></use>
+        </svg>
+      </button>
+
+    </div>
+  </div>
+</section>
