--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -21,7 +21,7 @@
       <div class="hero__foto--top">
 
         <div class="fotorama" data-arrows="false" data-click="true" data-swipe="true" data-width="100%"
-        data-ratio="800/800">>
+        data-ratio="800/800" data-keyboard="true">
 
 
       <picture >
