add many buttons to open modal

--- a/src/partials/offerings.html
+++ b/src/partials/offerings.html
@@ -58,7 +58,7 @@
           </p>
         </li>
       </ul>
-      <button
+      <button data-modal-open
         class="offerings__order-now-button order__btn--white"
         type="button"
       >
