--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,7 +29,7 @@
             </li>
           </ul>
         </nav>
-        <button class="btn-order btn-order--filled">Order Now</button>
+        <button data-modal-open class="btn-order btn-order--filled">Order Now</button>
       </div>
 
       <!-- mobile navigation -->
