--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop backdrop--hidden" data-modal>
     <div class="modal">
         <p class="modal__title">Order Form</p>
         <form autocomplete="off">
