--- a/src/sass/layout/_modal.scss
+++ b/src/sass/layout/_modal.scss
@@ -12,7 +12,7 @@
     transform: scale(1);
     transition: var(--animation);
 
-  &.is-hidden {
+  &.backdrop--hidden {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
