fix adaptation for slider images

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,7 +9,7 @@
         varius enim in eros elementum tristique. Duis cursus, mi quis viverra
         ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
       </p>
-      <button class="hero__btn animate__animated animate__pulse">
+      <button data-modal-open class="hero__btn animate__animated animate__pulse">
         Order Now
       </button>
     </div>
@@ -20,28 +20,34 @@
         <div class="swiper-slide">
           <img
             srcset="
-              ./images/hero/small_hero1@1x.png  768w,
-              ./images/hero/big_hero1@1x.png   1280w
+              ./images/hero/big_hero1@1x.png 528w,
+              ./images/hero/small_hero1@1x.png 292w,
+              ./images/hero/big_hero1@2x.png 1056w,
+              ./images/hero/small_hero1@2x.png 584w
             "
-            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            sizes="(min-width: 1280px) 528px, (min-width: 768px) 292px"
             src="./images/hero/small_hero1@1x.png"
             alt="Описание изображения для всех версий"
           />
           <img
             srcset="
-              ./images/hero/small_hero2@1x.png  768w,
-              ./images/hero/big_hero2@1x.png   1280w
+              ./images/hero/big_hero2@1x.png 528w,
+              ./images/hero/small_hero2@1x.png 292w,
+              ./images/hero/big_hero2@2x.png 1056w,
+              ./images/hero/small_hero2@2x.png 584w
             "
-            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            sizes="(min-width: 1280px) 528px, (min-width: 768px) 292px"
             src="./images/hero/small_hero2@1x.png"
             alt="Описание изображения для всех версий"
           />
           <img
             srcset="
-              ./images/hero/small_hero3@1x.png  768w,
-              ./images/hero/big_hero3@1x.png   1280w
+              ./images/hero/big_hero3@1x.png 528w,
+              ./images/hero/small_hero3@1x.png 292w,
+              ./images/hero/big_hero3@2x.png 1056w,
+              ./images/hero/small_hero3@2x.png 584w
             "
-            sizes="(min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px 100vw"
+            sizes="(min-width: 1280px) 528px, (min-width: 768px) 292px"
             src="./images/hero/small_hero3@1x.png"
             alt="Описание изображения для всех версий"
           />
