--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,10 +3,12 @@
   padding-top: 60px;
   padding-bottom: 50px;
   @media screen and (min-width: 768px) {
-    padding-bottom: 0px;
+    // padding-bottom: 0px;
+    padding-bottom: 73px;
   }
   @media screen and (min-width: 1280px) {
     padding-top: 158px;
+    padding-bottom: 164px;
   }
 }
 
@@ -26,11 +28,11 @@
   }
   @media screen and (min-width: 768px) {
     width: 100%;
-    height: 409px;
+    // height: 409px;
   }
   @media screen and (min-width: 1280px) {
     flex-direction: row;
-    height: 460px;
+    // height: 460px;
   }
 }
 .hero__info {
