--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,19 +2,13 @@
   <div class="container header__wrap">
     <!-- <div class="header__wrap"> -->
     <!-- logo -->
-    <!-- <img
+    <img
       class="logo logo__svg"
-      src="./images/sprite.svg#logo"
+      src="./images/svg/logo.svg"
       alt="logo"
       width="65"
       height="51"
-    /> -->
-
-    <a class="logo" href="#home">
-      <svg class="logo__svg" width="65" height="51">
-        <use href="./images/sprite.svg#logo"></use>
-      </svg>
-    </a>
+    />
 
     <!-- desktop navigation -->
     <div class="nav-wrap">
